--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabs"
+        android:id="@+id/tab"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:background="@android:color/white"
+        >
+    </com.google.android.material.tabs.TabLayout>
 
-        app:tabMode="fixed"
-        app:tabGravity="fill"
-        app:tabTextColor="#000000"
-        android:elevation="1dp"
-    />
-
-<FrameLayout
-    android:id="@+id/containers"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    />
-
-</LinearLayout>
+    <androidx.viewpager2.widget.ViewPager2
+        android:layout_below="@+id/tab"
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+    </androidx.viewpager2.widget.ViewPager2>
+</RelativeLayout>
