--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,17 @@
         android:id="@+id/tab"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@android:color/white"
+        android:background="@android:color/black"
+        android:layout_alignParentBottom="true"
         >
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:layout_below="@+id/tab"
+        android:layout_above="@+id/tab"
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/black"
         >
     </androidx.viewpager2.widget.ViewPager2>
 </RelativeLayout>
