--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -1,61 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context=".Fragment3">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="영화 후기"
-        android:textSize="10pt"
-        android:layout_margin="20dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/review_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:orientation="horizontal"
-        />
+    android:id="@+id/swipe_layout">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        
-        <EditText
-            android:id="@+id/review_id"
-            android:layout_width="220dp"
-            android:layout_height="250dp"
-            android:hint="리뷰"
-            android:layout_margin="20dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".Fragment3">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="영화 후기"
+            android:textSize="10pt"
+            android:layout_margin="10dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/review_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="20dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <EditText
+                android:id="@+id/review_id"
+                android:layout_width="200dp"
+                android:layout_height="180dp"
+                android:hint="리뷰"
+                android:layout_margin="20dp"/>
 
-            <ImageButton
-                android:id="@+id/select_movie_button"
+            <EditText
+                android:id="@+id/movie_id"
+                android:layout_width="30dp"
+                android:layout_height="180dp"
+                android:hint="임시"
+                android:layout_margin="20dp"/>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:src="@android:drawable/btn_dialog" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/edit_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:src="@android:drawable/btn_star" />
+
+                <ImageButton
+                    android:id="@+id/select_movie_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:src="@android:drawable/btn_dialog" />
+
+                <ImageButton
+                    android:id="@+id/edit_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:src="@android:drawable/btn_star" />
+            </LinearLayout>
+
         </LinearLayout>
 
+
     </LinearLayout>
-
-
-</LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
