--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -4,71 +4,60 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipe_layout">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipe_layout"
+    android:background="#ECECEC">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".Fragment3">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="영화 후기"
-            android:textSize="10pt"
-            android:layout_margin="10dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/review_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
             android:layout_margin="20dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            android:text="리뷰 모음집"
+            android:fontFamily="@font/nshv"
+            android:textSize="25sp" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/noData_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Data"
+            android:layout_margin="20dp"/>
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            card_view:cardBackgroundColor="#4F2E96"
+            card_view:cardCornerRadius="30dp"
+            app:cardElevation="8dp">
 
-            <EditText
-                android:id="@+id/review_id"
-                android:layout_width="200dp"
-                android:layout_height="180dp"
-                android:hint="리뷰"
-                android:layout_margin="20dp"/>
-
-            <EditText
-                android:id="@+id/movie_id"
-                android:layout_width="30dp"
-                android:layout_height="180dp"
-                android:hint="임시"
-                android:layout_margin="20dp"/>
-
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"/>
+
+        </androidx.cardview.widget.CardView>
 
 
-                <ImageButton
-                    android:id="@+id/select_movie_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:src="@android:drawable/btn_dialog" />
-
-                <ImageButton
-                    android:id="@+id/edit_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:src="@android:drawable/btn_star" />
-            </LinearLayout>
-
-        </LinearLayout>
-
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_btn"
+            android:layout_width="92dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#4F2E96"
+            app:srcCompat="@drawable/icon3"
+            app:tint="@android:color/white" />
 
     </LinearLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
